readding loading pages

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -202,4 +202,7 @@
       rgba(19, 22, 28, 0.7) 100%
     );
   }
+  .childSkeleton {
+    @apply bg-gray-100/100 dark:bg-gray-900/100 !important;
+  }
 }
